retrieved count to display current count as default instead of 0

--- a/crud app/public/index.html
+++ b/crud app/public/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="counter">Counter: <span class="number">0</span></div>
+    <div class="counter">Counter: <span class="number"></span></div>
     <button class="btn">Increase Counter</button>
   </div>
   
